create second page

--- a/index.html
+++ b/index.html
@@ -17,12 +17,43 @@
             </a>
             <ul class="interior">
                 <li><a href="#home" class="active">Home</a></li>
-                <li><a href="#about">General Information</a></li>
+                <li><a href="/generalinformation.html">General Information</a></li>
                 <li><a href="#payments">Payments</a></li>
                 <li><a href="#admissions">Admissions</a></li>
                 <li><a href="#contact">Contact Us</a></li>
             </ul>
         </nav>
+        <section>
+            <div class="visionandmission">
+                <div class="sec1">
+                    <p class="para1" style="order:2" >
+                        who are we?
+                        The Lebanese International School is a private school affiliated with the “Daawa and Reform Islamic Charitable Society,” and is licensed to receive learners at all levels of study before the university level.
+                    </p>
+                    <img class="img1" src="/assets/images/school 3.jpg" alt="school">
+                </div>
+                <div class="sec2">
+                    <p class="para2" >
+                        Our message: The school is committed, through comprehensive educational and academic work, to preparing young people who possess strong personalities and possess scientific knowledge and personal skills based on the values ​​of Islam.
+                    </p>
+                    <img class="img2"  src="/assets/images/school 1.jpg" alt="school">
+                </div>
+                <div class="sec3">
+                    <img class="img3" src="/assets/images/school 2.jpg" alt="school">
+                    <p class="para3">
+                        Our vision: It is expected to be concerned with distinguished educational and academic integration
+                        <br><br>Our motto: Through my morals and work, I live a good and reformative life
+                        <br><br>Our values: openness, responsibility, belonging, integrity, love
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <p style="font-size: 40px;">One child, one teacher, one book, one pen can change the world.
+            </p>
+            <p>&copy; 2023 Lebanese International School. All rights reserved.</p>
+        </footer>
 
 
     </body>
