finish payment page

--- a/generalinformation.html
+++ b/generalinformation.html
@@ -19,7 +19,7 @@
             <ul class="interior">
                 <li><a href="/index.html" class="active">Home</a></li>
                 <li><a href="/generalinformation.html">General Information</a></li>
-                <li><a href="#payments">Payments</a></li>
+                <li><a href="/payments.html">Payments</a></li>
                 <li><a href="#admissions">Admissions</a></li>
                 <li><a href="#contact">Contact Us</a></li>
             </ul>
