--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <img class="logo" src="/assets/images/LIS.png" alt="school logo">
             </a>
             <ul class="interior">
-                <li><a href="#home" class="active">Home</a></li>
+                <li><a href="/index.html" class="active">Home</a></li>
                 <li><a href="/generalinformation.html">General Information</a></li>
-                <li><a href="#payments">Payments</a></li>
+                <li><a href="/payments.html">Payments</a></li>
                 <li><a href="#admissions">Admissions</a></li>
                 <li><a href="#contact">Contact Us</a></li>
             </ul>
