create contact us

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <li><a href="/index.html" class="active">Home</a></li>
                 <li><a href="/generalinformation.html">General Information</a></li>
                 <li><a href="/payments.html">Payments</a></li>
-                <li><a href="#admissions">Admissions</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="/formpage.html">Admissions</a></li>
+                <li><a href="/contactus.html">Contact Us</a></li>
             </ul>
         </nav>
         <section>
