--- a/payments.html
+++ b/payments.html
@@ -20,8 +20,8 @@
                 <li><a href="/index.html" class="active">Home</a></li>
                 <li><a href="/generalinformation.html">General Information</a></li>
                 <li><a href="/payments.html">Payments</a></li>
-                <li><a href="#admissions">Admissions</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="/formpage.html">Admissions</a></li>
+                <li><a href="/contactus.html">Contact Us</a></li>
             </ul>
         </nav>
         <div class="section">
